# car-tracking-fullstack

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  README.org  cronjob  diesel.toml  docker-compose.yml  prod.yml
Android-App/: build.gradle
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs
backend/src/api/: front.rs  mob.rs  mod.rs
backend/src/db/: db_utils.rs  mod.rs  models.rs  schema.rs  utils.rs
backend/src/handlers/: common.rs  frontend.rs  mobile.rs  mod.rs
backend/src/routes/: frontend.rs  mobile.rs  mod.rs
backend/templates/: not-found.html
backend/test/: README.md  certificate  crear_vladi  create_user  create_user_mobile  data.json  get_trips  login  login_mobile  post.sh  postbad.sh  prod_env  send_data  send_data.sh  send_trips  test_env  tests.org  trip  trip.json  viajes
backend/test/ABC000/: certificate  create_user  send_trips
backend/test/ABC000/trips/: Test01.json  Test02.json  Test03.json  Test04.json  Test05.json  Test06.json  TestErrores.json  Viaje.json
backend/test/trips/: Test01.json  Test02.json  Test03.json  Test04.json  Test05.json  Test06.json  TestErrores.json  Viaje.json
blockchain/: .gitignore  Dockerfile  Dockerfile2.txt  Dockerfile3.txt  Readme.md  Readme.org  bs-config.json  instrucciones.txt  myContract.json  package-lock.json  package.json  start.sh  start_ganache  start_truffle  truffle-config.js
blockchain-client/: .gitignore  Dockerfile  app.py  app2.py  app3.py  requiremients.txt  test.py
blockchain/contracts/: CarKilometerCertification.sol
blockchain/ganache-data/: !blocks!0  !trie_db!0x01643f473880ce4e631b77cf537610f4b56f7e6ad048b7e1bb31a846b16f596c  !trie_db!0x06d1d17017025c778ff05a171bf3579523029b7ce7977e47d037daea4ef6e1c5  (+70 more)
blockchain/src/: index.html  (+1 more)
common/: Cargo.toml
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: main.rs  router.rs  store.rs
frontend/src/api/: mod.rs  types.rs  user_api.rs
frontend/src/components/: header.rs  spinner.rs
frontend/src/pages/: car_page.rs  certificate_page.rs  home_page.rs  login_page.rs  mod.rs  register_page.rs
k8s/: backend-deployment.yaml  backend-service.yaml  mariadb-deployment.yaml  mariadb-service.yaml  target-persistentvolumeclaim.yaml
mobile-app/: README.md  settings.gradle
(+37 files in other folders)
