[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
env_logger = "0.8"
handlebars = { version = "4.3.6", features = ["dir_source"] }
common = { path = "../common" }
