[package]
name = "tuto-projecte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
gloo = "0.8.0"
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.16.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"]}
yew-router = "0.17.0"
yewdux = "0.9.2"
gloo-net = "0.2"
